package calculatorMVC.view;

public class OutputSlice {
    void displayOutput(String result) {
        // Вывод результата на экран
    }
}

